Finished the general idea of the UI

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     </head>
     <body>
         <div class="main-container">
+            
             <div class="display">
-                <p>343</p>
+                <p class="smaller margin"></p>
+                <p class="margin below result"></p>
             </div>
+
             <div class="buttons">
-                <button class="bigger">Clear</button>
-                <button class="bigger">Delete</button>
+                <button class="bigger red">Clear</button>
+                <button class="bigger blue">Delete</button>
                 <button>7</button>
                 <button>8</button>
                 <button>9</button>
@@ -30,6 +33,8 @@
                 <button>=</button>
                 <button>+</button>
             </div>
+
         </div>
+        <script src="script.js" defer></script>
     </body>
 </html>
