--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
     </head>
     <body>
         <div class="main-container">
-            
+
             <div class="display">
                 <p class="smaller margin"></p>
                 <p class="margin below result"></p>
             </div>
 
             <div class="buttons">
-                <button class="bigger red">Clear</button>
-                <button class="bigger blue">Delete</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
+                <button class="bigger red clear">Clear</button>
+                <button class="bigger blue delete">Delete</button>
+                <button class="numbers">7</button>
+                <button class="numbers">8</button>
+                <button class="numbers">9</button>
                 <button>÷</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
+                <button class="numbers">4</button>
+                <button class="numbers">5</button>
+                <button class="numbers">6</button>
                 <button>×</button>
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
+                <button class="numbers">1</button>
+                <button class="numbers">2</button>
+                <button class="numbers">3</button>
                 <button>-</button>
                 <button>.</button>
-                <button>0</button>
+                <button class="numbers">0</button>
                 <button>=</button>
                 <button>+</button>
             </div>
