--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="main-container">
 
             <div class="display">
-                <p class="smaller margin"></p>
+                <p class="smaller margin history"></p>
                 <p class="margin below result"></p>
             </div>
 
@@ -19,19 +19,19 @@
                 <button class="numbers">7</button>
                 <button class="numbers">8</button>
                 <button class="numbers">9</button>
-                <button>÷</button>
+                <button class="function">÷</button>
                 <button class="numbers">4</button>
                 <button class="numbers">5</button>
                 <button class="numbers">6</button>
-                <button>×</button>
+                <button class="function">×</button>
                 <button class="numbers">1</button>
                 <button class="numbers">2</button>
                 <button class="numbers">3</button>
-                <button>-</button>
-                <button>.</button>
+                <button class="function">-</button>
+                <button clas="float">.</button>
                 <button class="numbers">0</button>
-                <button>=</button>
-                <button>+</button>
+                <button class="equals">=</button>
+                <button class="function">+</button>
             </div>
 
         </div>
