--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button class="numbers">2</button>
                 <button class="numbers">3</button>
                 <button class="function">-</button>
-                <button clas="float">.</button>
+                <button class="floating">.</button>
                 <button class="numbers">0</button>
                 <button class="equals">=</button>
                 <button class="function">+</button>
