--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
 
         </div>
         <script src="script.js" defer></script>
+        <script src="keyboard.js" defer></script>
     </body>
 </html>
